demo-app-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-app
        image: nginx:1.27-alpine
        ports:
        - containerPort: 5678
        volumeMounts:
        - name: ui
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
        - name: ui
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: ui
        configMap:
          name: demo-app-ui
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: default
spec:
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 5678
